# singleton_duplication

./: CMakeLists.txt  README.md
src/: liba.cpp  libb.cpp  main.cpp  singleton.h
